Middle text in pics, fixed header/footer, fixes with z-index

--- a/index.css
+++ b/index.css
@@ -5,20 +5,26 @@ body
     min-width: 1500px;
 }
 
+hr
+{
+    margin: 0;
+    padding: 0;
+}
+
 .middle-align-section
 {
     display: table-cell;
     vertical-align: middle;
     width: 100%;
-    height: calc(100vh - 150px);
+    height: 100vh;
 }
 
-.page-sticky-header
+.page-fixed-header
 {
     z-index: 100;
     width: 100%;
     background-color: white;
-    position: sticky;
+    position: fixed;
     top: 0;
     text-align: center;
     font-family: 'PT Sans Narrow', sans-serif;
@@ -35,8 +41,9 @@ footer
     z-index: 100;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
-    position: sticky;
+    position: fixed;
     bottom: 0;
+    left: 0;
     background-color: white;
     width: 100%;
 }
@@ -122,9 +129,7 @@ label > img
     height: 100%;
     text-align: center;
     display: block;
-    font-size: 30px;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    z-index: 30;
 }
 
 a:hover
@@ -414,7 +419,15 @@ input[id='sld10']:checked ~ .labels label[for='sld10'] + .title-black-back:hover
 
 .middle-block-text
 {
-    margin-top: 25%;
+    width: 100%;
+    height: 60%;
+    color: white;
+    position: absolute;
+    top: 40%;
+    left: 0;
+    z-index: 25;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .modal
